[package]
name = "rustOutboxSweeper"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1.48.0", features = ["full"] }
chrono = { version = "0.4.42"}
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
aws-config = "1.8.10"
aws-sdk-sqs = "1.88.0"
aws-sdk-sns = "1.89.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }
dotenvy = "0.15.7"
envy = "0.4.2"
serde = { version = "1.0.228", features = ["derive"] }