[package]
name = "rustOutboxSweeper"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1.48.0", features = ["full"] }
sentry = { version = "0.45.0", default-features = false, features = ["rustls", "tracing"] }
chrono = { version = "0.4.42" }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
aws-config = "1.8.10"
aws-sdk-sqs = "1.88.0"
aws-sdk-sns = "1.89.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "registry", "fmt"] }
uuid = { version = "1.18.1", features = ["v4"] }
dotenvy = "0.15.7"
envy = "0.4.2"
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }